<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Opcoes">

    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:mapbox_cameraTargetLat="59.31"
        mapbox:mapbox_cameraTargetLng="18.06"
        mapbox:mapbox_cameraZoom="14.0" />

    <TextView
        android:id="@+id/tvtexto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/o_que_gostaria_de_fazer"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/ibVisualizar"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/ibAdicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvtexto"
        app:srcCompat="@drawable/map_icon"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/ibVisualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/visualizar_pin"
        tools:ignore="DuplicateSpeakableTextCheck,RedundantDescriptionCheck" />

    <ImageButton
        android:id="@+id/ibAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/novo_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_pin_button"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>