<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdicionarPin">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mapa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        mapbox:mapbox_cameraTargetLat="59.31"
        mapbox:mapbox_cameraTargetLng="18.06"
        mapbox:mapbox_cameraZoom="14.0" />

    <TextView
        android:id="@+id/TvPosicionarPin"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="72dp"
        android:text="@string/posicionar_o_pin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/latitude"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/longitude"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/ibCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/tvLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TvPosicionarPin"
        mapbox:srcCompat="@drawable/check_button"
        tools:ignore="ImageContrastCheck,RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/button"
        app:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:srcCompat="@drawable/back_button"
        tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>